crates/wac-parser/tests/resolution/fail/unknown-package.wac
package test:comp;

import foo: bar:baz/qux;